Added javascript authentication to minutes edit view

--- a/docs/templates/minutes_edit.html
+++ b/docs/templates/minutes_edit.html
@@ -31,7 +31,7 @@
       </li>
       <li><button type="button" class="btn btn-primary ajax-button" id="save_all_button">Save all</button></li>
       <li><button type="button" class="btn btn-primary ajax-button" id="add_item_button">Add item</button></li>
-      <li><button type="button" class="btn btn-primary navigate-button" goto="{% url 'minutes-distribute' meeting_id %}" id="distribute_button">Distribute thse minutes</button></li>
+      <li><button type="submit" class="btn btn-primary navigate-button" goto="{% url 'minutes-distribute' meeting_id %}" id="submit_minutes">Distribute thse minutes</button></li>
       </ul>
   </div><!-- /.col-sm-3 -->
 
