Got sidebar item name updating working for minutes edit view

--- a/docs/templates/agenda_edit_ajax_items.html
+++ b/docs/templates/agenda_edit_ajax_items.html
@@ -21,8 +21,8 @@
     
     <div class="panel-heading">
       {{ item.item_no.value }}
-      {{ item.title|setclass:"form-control item-heading" }}
-        {{ item.title.errors }}
+      {{ item.title|setclass:"form-control item-title" }}
+      {{ item.title.errors }}
     </div>
 
     <div class="panel-body">
