Got new bug reports and new feature requests working again

--- a/bugs/templates/bug_list.html
+++ b/bugs/templates/bug_list.html
@@ -33,7 +33,7 @@
 	</table>
 </div>
 
-<a href={% url 'bug-report' %}><button type="button" class="btn btn-primary" data-toggle="button">Report a bug</button></a>
+<a href={% url 'bug-report' %}><button type="button" class="btn btn-primary">Report a bug</button></a>
 	
 	
 {% endblock %}
