Added delete modal to tasks and participants

--- a/docs/templates/agenda_list.html
+++ b/docs/templates/agenda_list.html
@@ -34,7 +34,7 @@
           <td>
             <button class="btn btn-primary delete-button" data-toggle="modal" 
               data-target=".modal"
-              name="Meeting {{ meeting.meeting_no }}"
+              name="Meeting number: {{ meeting.meeting_no }}"
               id="delete_{{ meeting.id }}">
                 Delete meeting
             </button>
