--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -3,125 +3,133 @@
 {% load staticfiles %}
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		
-		<link rel="shortcut icon" href="{% static 'images/econvenor-favicon-v1.ico' %}">
 
-		<title>eConvener</title>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" 
+          href="{% static 'images/econvenor-favicon-v1.ico' %}">
+    <title>eConvener</title>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/jquery-ui-1.10.4.custom.min.css' %}"
+          rel="stylesheet">
+    <link href="{% static 'css/jquery.timepicker-1.3.5.css' %}"
+          rel="stylesheet">
+    <link href="{% static 'css/econvenor.css' %}" rel="stylesheet">
+  </head>
 
-		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-		<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
-		<link href="{% static 'css/jquery-ui-1.10.4.custom.min.css' %}" rel="stylesheet">
-		<link href="{% static 'css/jquery.timepicker-1.3.5.css' %}" rel="stylesheet">
-		<link href="{% static 'css/econvenor.css' %}" rel="stylesheet">
-	</head>
+  <body>
+    <div class="nav navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse"
+                  data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">eConvener</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href={% url 'dashboard' %}>
+                <strong>Dashboard</strong></a></li>
+            <li><a href={% url 'task-list' %}>Tasks</a></li>
+            <li><a href={% url 'decision-list' %}>Decisions</a></li>
+            <li><a href={% url 'participant-list' %}>Participants</a></li>
+            <li><a href={% url 'agenda-list' %}>Agendas</a></li>
+            <li><a href={% url 'minutes-list' %}>Minutes</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Feedback <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a href={% url 'bug-report' %}>
+                  <strong>Report a bug</strong></a></li>
+                <li><a href={% url 'bug-list' %}>View all bug reports</a></li>
+                <li class="divider"></li>
+                <li><a href={% url 'feature-request' %}>
+                  <strong>Request a feature/change</strong></a></li>
+                <li><a href={% url 'feature-list' %}>
+                  View all feature/change requests</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Help <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href={% url 'user-guide' %}>
+                  <strong>User guide</strong></a></li>
+                <li class="divider"></li>
+                <li><a href={% url 'faqs' %}><strong>FAQs</strong></a></li>
+                <li><a href={% url 'ask-question' %}>Ask a question</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Hi, {{ user }} <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href={% url 'account' %}>Account settings</a></li>
+                <li class="divider"></li>
+                <li><a href={% url 'logout' %}>
+                  <strong>Log out</strong></a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div><!-- /.container -->
+    </div><!-- /.navbar -->
+    
+    <div class="container-fluid">
 
-	<body>
+      {% block content %}
+      {% endblock content %}
 
-		<div class="nav navbar navbar-inverse navbar-fixed-top" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="#">eConvener</a>
-				</div>
-				<div class="collapse navbar-collapse">
-					<ul class="nav navbar-nav">
-						<li><a href={% url 'dashboard' %}><strong>Dashboard</strong></a></li>
-						<li><a href={% url 'task-list' %}>Tasks</a></li>
-						<li><a href={% url 'decision-list' %}>Decisions</a></li>
-						<li><a href={% url 'participant-list' %}>Participants</a></li>
-						<li><a href={% url 'agenda-list' %}>Agendas</a></li>
-						<li><a href={% url 'minutes-list' %}>Minutes</a></li>
-					</ul>
-					
-					<ul class="nav navbar-nav navbar-right">
-						
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Feedback <b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<li><a href={% url 'bug-report' %}><strong>Report a bug</strong></a></li>
-								<li><a href={% url 'bug-list' %}>View all bug reports</a></li>
-								<li class="divider"></li>
-								<li><a href={% url 'feature-request' %}><strong>Request a feature/change</strong></a></li>
-								<li><a href={% url 'feature-list' %}>View all feature/change requests</a></li>
-							</ul>
-						</li>
-						
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<li><a href={% url 'user-guide' %}><strong>User guide</strong></a></li>
-								<li class="divider"></li>
-								<li><a href={% url 'faqs' %}><strong>FAQs</strong></a></li>
-								<li><a href={% url 'ask-question' %}>Ask a question</a></li>
-							</ul>
-						</li>
-						
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Hi, {{ user }} <b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<li><a href={% url 'account' %}>Account settings</a></li>
-								<li class="divider"></li>
-								<li><a href={% url 'logout' %}><strong>Log out</strong></a></li>
-							</ul>
-						</li>
-      				</ul>
-      			</div>
-			</div>
-		</div>
-        <div class="container-fluid">
-        
-            {% block content %}
-            {% endblock content %}
-
-        
-            <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="DeleteConfirmation" aria-hidden="true" aria-describedby="A pop-up to confirm deletion">
-              <div class="modal-dialog modal-sm">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h4 class="modal-title">Confirm deletion</h4>
-                  </div><!-- /.modal-header -->
-                  <div class="modal-body">
-                  </div><!-- /.modal-body -->
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">
-                      Cancel
-                    </button>
-                    <form action="" method="POST">
-                    {% csrf_token %} 
-                      <button type="submit" class="btn btn-primary modal-button"
+      <div class="modal fade" tabindex="-1" role="dialog" 
+           aria-labelledby="DeleteConfirmation" aria-hidden="true" 
+           aria-describedby="A pop-up to confirm deletion">
+        <div class="modal-dialog modal-sm">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Confirm deletion</h4>
+            </div><!-- /.modal-header -->
+            <div class="modal-body">
+            </div><!-- /.modal-body -->
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" 
+                      data-dismiss="modal">
+                Cancel
+              </button>
+              <form action="" method="POST">
+                {% csrf_token %} 
+                <button type="submit" class="btn btn-primary modal-button"
                         name="button">
-                          Delete
-                      </button>
-                    </form>
-                  </div><!-- /.modal-footer -->
-                </div><!-- /.modal-content -->
-              </div><!-- /.modal-dialog -->
-            </div><!-- /.modal -->        
-        
-          
-        </div><!-- ./container -->
-		
-		<script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
-		<script src="{% static 'js/bootstrap.min.js' %}"></script>
-		<script src="{% static 'js/jquery-ui-1.10.4.custom.min.js' %}"></script>
-        <script src="{% static 'js/jquery.timepicker-1.3.5.min.js' %}"></script>
-		<script src="{% static 'js/jquery.validate-1.11.1.min.js' %}"></script>
-		<script src="{% static 'js/econvenor.js' %}"></script>
-		
-		{% block extrajs %}
-		{% endblock extrajs %}
-					
-    </body>
-</html>
+                  Delete
+                </button>
+              </form>
+            </div><!-- /.modal-footer -->
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->        
 
+    </div><!-- ./container-fluid -->
+
+    <script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery-ui-1.10.4.custom.min.js' %}"></script>
+    <script src="{% static 'js/jquery.timepicker-1.3.5.min.js' %}"></script>
+    <script src="{% static 'js/jquery.validate-1.11.1.min.js' %}"></script>
+    <script src="{% static 'js/econvenor.js' %}"></script>
+
+    {% block extrajs %}
+    {% endblock extrajs %}
+
+  </body>
+</html>
