--- a/participants/templates/participant_edit.html
+++ b/participants/templates/participant_edit.html
@@ -26,11 +26,14 @@
       class="btn btn-default">
         Cancel
     </a>
-    <button type="submit" class="btn btn-danger" name="button"
-      value="delete">
-        Delete participant
-    </button>
   </form>
+
+  <button class="btn btn-default delete-button" data-toggle="modal" 
+    data-target=".modal" name="Participant: {{ form.first_name.value }}"
+    id="delete_participant">
+      Delete participant
+  </button>
+
 </div>
 
 {% endblock content %}
