--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -23,8 +23,11 @@
   </head>
 
   <body>
+
     <div class="nav navbar navbar-inverse navbar-fixed-top" role="navigation">
+
       <div class="container">
+
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse"
                   data-target=".navbar-collapse">
@@ -34,7 +37,8 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">eConvener</a>
-        </div>
+        </div><!-- /.navbar-header -->
+
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href={% url 'dashboard' %}>
@@ -83,9 +87,9 @@
               </ul>
             </li>
           </ul>
-        </div>
+        </div><!-- /.collapse   -->
       </div><!-- /.container -->
-    </div><!-- /.navbar -->
+    </div><!-- /.nav -->
     
     <div class="container-fluid">
 
@@ -119,7 +123,7 @@
         </div><!-- /.modal-dialog -->
       </div><!-- /.modal -->        
 
-    </div><!-- ./container-fluid -->
+    </div><!-- /.container-fluid -->
 
     <script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
