--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -37,7 +37,7 @@
 
 body {
   font-family: 'Body', Helvetica, Arial, sans-serif;
-  padding-top: 3em;
+  padding-top: 50px;
 /*  background-color: #eeeeee; */
   background-image: url('/static/images/texture.png');
 }
@@ -373,63 +373,15 @@ tbody tr:hover {
 
 
 /*
- * Sidebar
- */
-
-/* Hide for mobile, show later */
-.sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    border-right: 1px solid #eee;
-  }
-}
-
-
-
-/* Sidebar navigation */
-.nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
-
-}
-.nav-sidebar li a {
-  padding-right: 20px;
-  padding-left: 20px;
-  color: #fff;
-}
-
-.nav-sidebar li {
-    padding: 20px 20px 20px 0;
-    border-bottom: 5px solid #eeeeee;
-}
-.nav-sidebar > .active > a {
-  color: #fff;
-  background-color: #ff0066;
-}
-
-
-/*
  * Spacers
  */
 
 .top-spacer {
-  height: 150px;
+  height: 200px;
 }
 
 .bottom-spacer {
-  height: 500px;
+  height: 200px;
 }
 
 
@@ -454,3 +406,74 @@ tbody tr:hover {
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 0, 102, .6);
 }
 
+
+/*
+ * Sidebar
+ */
+
+/* Hide for mobile */
+.sidebar {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
+  }
+}
+
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-right: -21px;
+  margin-bottom: 20px;
+  margin-left: -20px;
+}
+.nav-sidebar > li > a {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+.nav-sidebar > .active > a {
+  color: #fff;
+  background-color: #993333;
+}
+
+.nav-second-level li a {
+    padding-left: 37px;
+}
+
+/*
+ * Main content
+ */
+
+.main {
+  padding: 20px;
+}
+@media (min-width: 768px) {
+  .main {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+.main .page-header {
+  margin-top: 0;
+}
+
+
+/*
+ * Toolbar
+ */
+ 
+.toolbar {
+  position: fixed; 
+  top: 50px;
+  right: 0px;
+}
