--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" 
@@ -26,7 +26,7 @@
 
     <div class="nav navbar navbar-inverse navbar-fixed-top" role="navigation">
 
-      <div class="container">
+      <div class="container-fluid">
 
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -80,10 +80,9 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Hi, {{ user }} <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href={% url 'account' %}>Account settings</a></li>
+                <li><a href={% url 'account' %}><i class="fa fa-gear fa-fw"></i> Account settings</a></li>
                 <li class="divider"></li>
-                <li><a href={% url 'logout' %}>
-                  <strong>Log out</strong></a></li>
+                <li><a href={% url 'logout' %}><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
               </ul>
             </li>
           </ul>
@@ -92,10 +91,96 @@
     </div><!-- /.nav -->
     
     <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+          <ul class="nav nav-sidebar" id="leftsidebar">
 
-      {% block content %}
-      {% endblock content %}
+            <li>
+              <a href={% url 'dashboard' %}>
+                <i class="fa fa-tachometer fa-fw fa-lg"></i>Dashboard
+              </a>
+            </li>
 
+            <li class="sidebar-item">
+              <a href="#">
+                <i class="fa fa-edit fa-fw fa-lg"></i>
+                Meetings
+                <i class="fa fa-angle-down pull-right"></i>
+              </a>
+              <ul class="nav nav-second-level">
+                <li><a href="#"><i class="fa fa-angle-double-right"></i>
+                  New meeting</a>
+                </li>
+                <li><a href="#"><i class="fa fa-angle-double-right"></i>
+                  Upcoming meeting</a>
+                </li>
+                <li><a href="#"><i class="fa fa-angle-double-right"></i>
+                  Last meeting</a>
+                </li>
+                <li><a href={% url 'agenda-list' %}>
+                  <i class="fa fa-angle-double-right"></i>
+                  All meetings</a>
+                </li>
+              </ul>
+            </li>
+            
+            <li class="sidebar-item">
+              <a href="#">
+                <i class="fa fa-edit fa-fw fa-lg"></i>
+                Tasks
+                <i class="fa fa-angle-down pull-right"></i>
+              </a>
+              <ul class="nav nav-second-level">
+                <li><a href="#"><i class="fa fa-angle-double-right"></i>
+                  New task</a>
+                </li>
+                <li><a href={% url 'task-list' %}>
+                  <i class="fa fa-angle-double-right"></i>
+                  All tasks</a>
+                </li>
+              </ul>
+            </li>                    
+
+            <li class="sidebar-item">
+              <a href="#">
+                <i class="fa fa-edit fa-fw fa-lg"></i>
+                  Decisions
+                <i class="fa fa-angle-down pull-right"></i>
+              </a>
+              <ul class="nav nav-second-level">
+                <li><a href={% url 'decision-list' %}>
+                  <i class="fa fa-angle-double-right"></i>
+                  All decisions</a>
+                </li>
+              </ul>
+            </li>                                
+
+            <li class="sidebar-item">
+              <a href="#">
+                <i class="fa fa-edit fa-fw fa-lg"></i>
+                  Participants
+                <i class="fa fa-angle-down pull-right"></i>
+              </a>
+              <ul class="nav nav-second-level">
+                <li><a href={% url 'participant-add' %}>
+                  <i class="fa fa-angle-double-right"></i>
+                  New participant</a>
+                </li>
+                <li><a href={% url 'participant-list' %}>
+                  <i class="fa fa-angle-double-right"></i>
+                  All participants</a>
+                </li>
+              </ul>
+            </li>
+                                
+          </ul>
+        </div><!-- /.sidebar -->
+   
+        {% block content %}
+        {% endblock content %}
+
+      </div><!-- /.row -->
+        
       <div class="modal fade" tabindex="-1" role="dialog" 
            aria-labelledby="DeleteConfirmation" aria-hidden="true" 
            aria-describedby="A pop-up to confirm deletion">
@@ -130,6 +215,7 @@
     <script src="{% static 'js/jquery-ui-1.10.4.custom.min.js' %}"></script>
     <script src="{% static 'js/jquery.timepicker-1.3.5.min.js' %}"></script>
     <script src="{% static 'js/jquery.validate-1.11.1.min.js' %}"></script>
+    <script src="{% static 'js/jquery.metisMenu.js' %}"></script>
     <script src="{% static 'js/econvenor.js' %}"></script>
 
     {% block extrajs %}
