Set up content columns within sidebar format

--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-    <div class="col-sm-6 col-sm-offset-3 col-md-8 col-md-offset-2 main">
+    <div class="col-sm-8 col-md-9 main">
 
       <div class="top-spacer">
       </div>
